--- a/.github/workflows/Sync gh-pages branch.yml
+++ b/.github/workflows/Sync gh-pages branch.yml
@@ -25,6 +25,6 @@ jobs:
       # Runs a single command using the runners shell
       - name: Test
         run: |
-          apt update
-          apt upgrade -y
-          apt install gpg
+          sudo apt update
+          sudo apt upgrade -y
+          sudo apt install gpg
