--- a/.github/workflows/Sync gh-pages branch.yml
+++ b/.github/workflows/Sync gh-pages branch.yml
@@ -13,17 +13,15 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Setup SSH key
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan github.com >> ~/.ssh/known_hosts
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Setup GPG key
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
-      # Runs a single command using the runners shell
-      - name: Test
-        run: |
-          sudo apt update
-          sudo apt install gpg
+          echo "${{ secrets.PGP_PRIVATE_KEY }}" > private.key
+          chmod 600 private.key
+          gpg --import private.key
