--- a/.github/workflows/Sync gh-pages branch.yml
+++ b/.github/workflows/Sync gh-pages branch.yml
@@ -11,7 +11,6 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
 
       - name: Setup GPG
         run: |
@@ -26,6 +25,11 @@ jobs:
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_ed25519
           chmod 600 ~/.ssh/id_ed25519
           ssh-keyscan github.com >> ~/.ssh/known_hosts
+
+      - name: Checkout repo
+        uses: actions/checkout@v4.1.1
+        with:
+          fetch-depth: 0
 
       - name: Sync to gh-pages
         run: |
