--- a/.github/workflows/Sync gh-pages branch.yml
+++ b/.github/workflows/Sync gh-pages branch.yml
@@ -30,6 +30,7 @@ jobs:
         uses: actions/checkout@v4.1.1
         with:
           fetch-depth: 0
+          ref: zero
 
       - name: Sync to gh-pages
         run: |
